--- a/templates/map.html
+++ b/templates/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="{{lang}}">
 	<head>
-		<title>Pokémon Go Map</title>
+		<title>Pokémown</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes">
@@ -38,7 +38,7 @@
 		<!-- Header -->
 		<header id="header">
 			<a href="#nav">Options</a>
-			<h1><a href="#">Pokémon Go Map</a></h1>
+			<h1><a href="#">Pokémown</a></h1>
 		</header>
 
 		<!-- Nav -->
