--- a/templates/map.html
+++ b/templates/map.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<meta name="apple-mobile-web-app-title" content="PokeMap">
+		<meta name="apple-mobile-web-app-title" content="Pokémown">
 		<meta name="mobile-web-app-capable" content="yes">
 
 		<!-- Fav- & Apple-Touch-Icons -->
