--- a/templates/map.html
+++ b/templates/map.html
@@ -36,8 +36,8 @@
 
 	<div class="wrapper">
 		<!-- Header -->
-		<header id="header">
-			<a href="#nav">Options</a>
+		<header id="header" style="text-align:center">
+			<a href="#nav" style="display:block;float:left" >Options</a>
 			<h1><a href="#">Pokémown</a></h1>
 		</header>
 
