--- a/static/sass/layout/_header.scss
+++ b/static/sass/layout/_header.scss
@@ -12,7 +12,7 @@
 		left: 0;
 		line-height: 3.50em;
 		position: fixed;
-		text-align: left;
+		text-align: center;
 		top: 0;
 		width: 100%;
 		z-index: _misc(z-index-base) + 1;
@@ -44,6 +44,8 @@
 			&[href="#nav"] {
 				@include icon('\f0b0');
 				-webkit-tap-highlight-color: rgba(0,0,0,0);
+				display: block;
+				float: left;
 
 				&:before {
 					margin: 0 0.5em 0 0;
