Replace funnel with cog icon

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1837,7 +1837,7 @@ body {
       display: block;
       float: left; }
       #header > a[href="#nav"]:before {
-        content: "";
+        content: "";
         -moz-osx-font-smoothing: grayscale;
         -webkit-font-smoothing: antialiased;
         font-family: FontAwesome;
