--- a/static/sass/layout/_header.scss
+++ b/static/sass/layout/_header.scss
@@ -42,7 +42,7 @@
 			}
 
 			&[href="#nav"] {
-				@include icon('\f0b0');
+				@include icon('\f013');
 				-webkit-tap-highlight-color: rgba(0,0,0,0);
 				display: block;
 				float: left;
