--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1072,7 +1072,7 @@ body {
 /* Type */
 body, input, select, textarea {
   color: #444;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Muli", sans-serif;
   font-size: 13pt;
   font-weight: normal;
   line-height: 1.65; }
@@ -1902,7 +1902,6 @@ body {
   z-index: 500; }
   #nav h3 {
     font-size: 18px;
-    font-family: 'Muli', sans-serif;
     color: #3b3b3b; }
   #nav p {
     margin-bottom: 20px;
