--- a/static/sass/libs/_vars.scss
+++ b/static/sass/libs/_vars.scss
@@ -19,7 +19,7 @@
 
 // Font.
 	$font: (
-		family:				(Arial, Helvetica, sans-serif),
+		family:				('Muli', sans-serif),
 		family-fixed:		('Courier New', monospace),
 		weight:				normal,
 		weight-bold:		bold
