--- a/templates/map.html
+++ b/templates/map.html
@@ -37,7 +37,9 @@
 	<div class="wrapper">
 		<!-- Header -->
 		<header id="header">
-			<a href="#nav">Options</a>
+			<a href="#nav" title="Options">
+				<i class="fa fa-cog" aria-hidden="true"></i>
+			</a>
 			<h1><a href="#">Pokémown</a></h1>
 		</header>
 
