Add brand color to header

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1801,25 +1801,27 @@ body {
 
 #header {
   background: #3b3b3b;
-  color: #d6d6d6;
+  border-bottom: 1em solid #ffcb05;
+  box-sizing: border-box;
+  color: #ffcb05;
   cursor: default;
-  height: 3.50em;
   left: 0;
   line-height: 3.50em;
+  min-height: 3.50em;
   position: fixed;
   text-align: center;
   top: 0;
   width: 100%;
   z-index: 10001; }
   #header > h1 {
-    color: #ffffff;
+    color: inherit;
     display: inline-block;
     height: inherit;
     line-height: inherit;
     margin: 0;
     padding: 0; }
     #header > h1 a {
-      font-size: 1.25em; }
+      font-size: 2em; }
   #header > a {
     -moz-transition: color 0.2s ease-in-out;
     -webkit-transition: color 0.2s ease-in-out;
@@ -1827,11 +1829,11 @@ body {
     transition: color 0.2s ease-in-out;
     display: inline-block;
     padding: 0 0.75em;
-    color: inherit;
     text-decoration: none; }
     #header > a:hover {
       color: #ffffff; }
     #header > a[href="#nav"] {
+      color: inherit;
       display: block;
       float: left;
       -webkit-tap-highlight-color: transparent; }
@@ -2017,10 +2019,6 @@ html, body {
 #header, #map, #footer {
   position: absolute; }
 
-#header {
-  height: 3.5em;
-  width: 100%; }
-
 #map {
   top: 3.5em;
   bottom: 0px;
@@ -2054,3 +2052,5 @@ html, body {
         border-left: 0;
         margin-left: 0;
         padding-left: 0; } }
+
+/*# sourceMappingURL=main.css.map */
