--- a/static/sass/libs/_vars.scss
+++ b/static/sass/libs/_vars.scss
@@ -36,6 +36,14 @@
 		border2:			rgba(144,144,144,0.5),
 		border2-bg:			rgba(144,144,144,0.2),
 
+		brand: (
+			yellow:			#ffcb05,
+			yellow-shadow:			#c7a008,
+			blue:			#0071b9,
+			light-blue:			#2a75bb,
+			dark-blue:			#3c5aa6,
+		),
+
 		accent1: (
 			bg:				#5AA6ED,
 			fg:				mix(#5AA6ED, #ffffff, 25%),
