--- a/static/sass/layout/_header.scss
+++ b/static/sass/layout/_header.scss
@@ -6,11 +6,13 @@
 
 	#header {
 		background: darken(_palette(accent2, bg), 12);
-		color: _palette(accent2, fg);
+		border-bottom: 1em solid _palette(brand, yellow);
+		box-sizing: border-box;
+		color: _palette(brand, yellow);
 		cursor: default;
-		height: 3.50em;
 		left: 0;
 		line-height: 3.50em;
+		min-height: 3.50em;
 		position: fixed;
 		text-align: center;
 		top: 0;
@@ -18,7 +20,7 @@
 		z-index: _misc(z-index-base) + 1;
 
 		> h1 {
-			color: _palette(accent2, fg-bold);
+			color: inherit;
 			display: inline-block;
 			height: inherit;
 			line-height: inherit;
@@ -26,7 +28,7 @@
 			padding: 0;
 
 			a {
-				font-size: 1.25em;
+				font-size: 2em;
 			}
 		}
 
@@ -34,7 +36,6 @@
 			@include vendor('transition', 'color #{_duration(transition)} ease-in-out');
 			display: inline-block;
 			padding: 0 0.75em;
-			color: inherit;
 			text-decoration: none;
 
 			&:hover {
@@ -42,6 +43,7 @@
 			}
 
 			&[href="#nav"] {
+				color: inherit;
 				display: block;
 				float: left;
 				-webkit-tap-highlight-color: rgba(0,0,0,0);
