--- a/static/sass/libs/_vars.scss
+++ b/static/sass/libs/_vars.scss
@@ -37,6 +37,10 @@
 		border2-bg:			rgba(144,144,144,0.2),
 
 		brand: (
+			bg: #eef9e9,
+			bg2: #fafafa,
+			text: #44696c,
+			green: #6dedb7,
 			yellow:			#ffcb05,
 			yellow-shadow:			#c7a008,
 			blue:			#0071b9,
