--- a/static/sass/layout/_nav.scss
+++ b/static/sass/layout/_nav.scss
@@ -4,9 +4,9 @@
 		@include vendor('transform', 'translateX(-18em)');
 		@include vendor('transition', ('transform #{_duration(nav)} ease', 'box-shadow #{_duration(nav)} ease', 'visibility #{_duration(nav)}'));
 		-webkit-overflow-scrolling: touch;
-		background: #F8F8F8;
+		background: _palette(brand, bg2);
 		box-shadow: none;
-		color: _palette(accent2, fg-bold);
+		color: _palette(brand, text);
 		height: 100%;
 		max-width: 80%;
 		overflow-y: auto;
@@ -19,11 +19,11 @@
 		z-index: 500;
 		h3 {
 			font-size: 18px;
-			color: darken(_palette(accent2, bg), 12);
+			color: _palette(brand, text);
 		}
 		p {
 			margin-bottom: 20px;
-			color: darken(_palette(accent2, bg), 12);
+			color: _palette(brand, text);
 		}
 		> ul {
 			margin: 0 0 (_size(element-margin) * 0.5) 0;
