--- a/templates/map.html
+++ b/templates/map.html
@@ -2,6 +2,10 @@
 <html lang="{{lang}}">
 	<head>
 		<title>Pokémown</title>
+		<script>
+		if (window.location.protocol != "https:")
+			window.location.protocol = "https";
+		</script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes">
@@ -30,7 +34,6 @@
 		<link rel="apple-touch-icon" href="static/appicons/180x180.png" sizes="180x180">
 
 		<link rel="stylesheet" href="static/dist/css/app.min.css" />
-		<script src="static/js/vendor/modernizr.custom.js"></script>
 	</head>
 	<body id="top">
 
@@ -156,6 +159,8 @@
 	  ga('send', 'pageview');
 
 	</script>
+
+	<script src="static/js/vendor/modernizr.custom.js"></script>
 
 	</body>
 </html>
