--- a/templates/map.html
+++ b/templates/map.html
@@ -3,8 +3,9 @@
 	<head>
 		<title>Pokémown</title>
 		<script>
-		if (window.location.protocol != "https:")
+		if (window.location.protocol != "https:" && window.location.hostname != 'localhost') {
 			window.location.protocol = "https";
+		}
 		</script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
