--- a/static/sass/layout/_nav.scss
+++ b/static/sass/layout/_nav.scss
@@ -101,3 +101,10 @@
 			padding: 2.5em 1.75em;
 		}
 	}
+
+	.credits {
+		border-top: 1px solid #ccc;
+		float: left;
+		padding-top: 15px;
+		width: 100%;
+	}
