--- a/templates/map.html
+++ b/templates/map.html
@@ -46,7 +46,7 @@
 			<a href="#nav" title="Options">
 				<i class="fa fa-cog" aria-hidden="true"></i>
 			</a>
-			<h1><a href="#">Pokémown</a></h1>
+			<h1><a href="/">Pokémown</a></h1>
 		</header>
 
 		<!-- Nav -->
@@ -121,6 +121,16 @@
 				</div>
 			</div>
 			<!-- <button id="trigger-overlay">Test overlay</button> -->
+			<div class="credits">
+				<h3>About</h3>
+				<p>
+					<a href="http://vkampouris.com" target="_blank">Vassilis Kampouris</a><br>
+					<a href="https://panossakkos.github.io/" target="_blank">Pannos Sakkos</a> (PMS)<br>
+					<a href="https://github.com/bandito" target="_blank">bandito</a> (dedicated to his kids)<br>
+					<a href="http://sebdesign.eu" target="_blank">Sébastien Nikolaou</a>
+				</p>
+				<small>The project is based on the <a href="https://jz6.github.io/PoGoMap" target="_blank">PoGoMap</a> project and distributed under the <a href="https://cdn.rawgit.com/vkampouris/pokemownbeta/master/LICENSE">GNU Affero GPL license</a>.</small>
+			</div>
 		</nav>
 
 		<div id="map"></div>
@@ -139,6 +149,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/skel/3.0.1/skel.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
 
 	<script type="text/javascript" src="static/dist/js/app.min.js"></script>
 	<script type="text/javascript" src="static/js/vendor/classie.js"></script>
