--- a/templates/map.html
+++ b/templates/map.html
@@ -46,7 +46,7 @@
 			<a href="#nav" title="Options">
 				<i class="fa fa-cog" aria-hidden="true"></i>
 			</a>
-			<h1><a href="/">Pokémown</a></h1>
+			<h1><a href="/">Pokémown</a> <span class="beta">BETA</span></h1>
 		</header>
 
 		<!-- Nav -->
