--- a/templates/map.html
+++ b/templates/map.html
@@ -44,7 +44,7 @@
 		<!-- Header -->
 		<header id="header">
 			<a href="#nav" title="Options">
-				<i class="fa fa-cog" aria-hidden="true"></i>
+				<i class="fa fa-lg fa-cog" aria-hidden="true"></i>
 			</a>
 			<h1><a href="/">Pokémown</a> <span class="beta">BETA</span></h1>
 		</header>
