Add color to beta

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1871,6 +1871,9 @@ body {
   #header {
     min-width: 320px; } }
 
+.beta {
+  color: #1bd989; }
+
 /* Nav */
 #nav {
   -moz-transform: translateX(-18em);
