--- a/templates/map.html
+++ b/templates/map.html
@@ -2,6 +2,7 @@
 <html lang="{{lang}}">
 	<head>
 		<title>Pokémown</title>
+		<meta name="description" content="Live visualization of all the pokemon (with option to show gyms and pokestops) in your area.">
 		<script>
 		if (window.location.protocol != "https:" && window.location.hostname != 'localhost') {
 			window.location.protocol = "https";
@@ -13,6 +14,12 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="apple-mobile-web-app-title" content="Pokémown">
 		<meta name="mobile-web-app-capable" content="yes">
+
+		<meta property="og:url"                content="https://www.pokemown.com" />
+		<meta property="og:type"               content="website" />
+		<meta property="og:title"              content="Pokémown" />
+		<meta property="og:description"        content="Live visualization of all the pokemon (with option to show gyms and pokestops) in your area." />
+		<meta property="og:image"              content="https://www.pokemown.com/static/cover.png" />
 
 		<!-- Fav- & Apple-Touch-Icons -->
 		<!-- Favicon -->
