--- a/templates/map.html
+++ b/templates/map.html
@@ -98,7 +98,7 @@
 			<div class="form-control switch-container">
 				<h3>Scanned Locations</h3>
 				<div class="onoffswitch">
-					<input id="scanned-switch" type="checkbox" name="scanned-switch" class="onoffswitch-checkbox"/>
+					<input id="scanned-switch" type="checkbox" name="scanned-switch" class="onoffswitch-checkbox" checked/>
 					<label class="onoffswitch-label" for="scanned-switch">
 						<span class="switch-label" data-on="On" data-off="Off"></span>
 						<span class="switch-handle"></span>
