--- a/templates/map.html
+++ b/templates/map.html
@@ -58,7 +58,7 @@
 
 		<!-- Nav -->
 		<nav id="nav">
-			<p>Filter through Pokémon, Gyms &amp; Pokéstops.</p>
+			<p>Filter through locations, Pokémon, Gyms &amp; Pokéstops.</p>
 			<div class="form-control">
 				<label for="next-location">
 					<h3>Change your location</h3>
