--- a/templates/map.html
+++ b/templates/map.html
@@ -18,7 +18,7 @@
 		<meta property="og:url"                content="https://www.pokemown.com" />
 		<meta property="og:type"               content="website" />
 		<meta property="og:title"              content="Pokémown" />
-		<meta property="og:description"        content="Live visualization of all the pokemon (with option to show gyms and pokestops) in your area." />
+		<meta property="og:description"        content="Live visualization of all the pokemon (with option to show gyms and pokestops) in your area. See also the results of others users in other locations. So help each other by scanning the locations." />
 		<meta property="og:image"              content="https://www.pokemown.com/static/cover.png" />
 
 		<!-- Fav- & Apple-Touch-Icons -->
