--- a/templates/map.html
+++ b/templates/map.html
@@ -132,7 +132,7 @@
 				<h3>About</h3>
 				<p>
 					<a href="http://vkampouris.com" target="_blank">Vasilis Kampouris</a><br>
-					<a href="https://panossakkos.github.io/" target="_blank">Pannos Sakkos</a> (PMS)<br>
+					<a href="https://panossakkos.github.io/" target="_blank">Panos</a><br>
 					<a href="https://github.com/bandito" target="_blank">bandito</a> (dedicated to his kids)<br>
 					<a href="http://sebdesign.eu" target="_blank">Sébastien Nikolaou</a>
 				</p>
